# awast

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yaml
awast/cli/: main.py  utils.py
awast/cli/fastapi/: new_api.py
awast/cli/flask/: new_api.py
awast/cli/kubernetes/: new_deployment.py
awast/core/mod_fastapi/: app_factory.py  get_app.py
awast/core/mod_flask/: app_factory.py
awast/templates/api/: build.yaml.jinja  build_production.yaml.jinja  build_staging.values.yaml  move_issue.yaml.jinja  unit_test.values.yaml  unit_test.yaml.jinja  values.yaml
awast/templates/api/fastapi/: Dockerfile.jinja  app.py.jinja  app.values.yaml
awast/templates/api/flask/: Dockerfile.jinja  app.py.jinja
awast/templates/fastapi/: Dockerfile  app.py  build_staging.yaml.jinja  pyproject.toml.jinja  unit_test.yaml.jinja
awast/templates/kubernetes/: deployment  deployment.jinja  deployment.values.yaml  service.jinja  values.yaml
tests/: test_new_api.py
tests/unit/cli/: test_new_api.py  test_new_deployment.py  test_new_fastapi.py  test_utils.py  utils.py
tests/unit/cli/output_files/: build_production.yaml  build_staging.yaml  unit_test.yaml
tests/unit/core/: test_create_app.py
