[tool.poetry]
name = "awast"
version = "0.1.0"
description = ""
authors = ["Diego Rodriguez Mancini <diegorodriguezmancini@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
typer = {extras = ["all"], version = "^0.7.0"}
jinja2 = "^3.1.2"

[tool.poetry.scripts]
awast = "awast.cli.main:app"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
requests = "^2.28.1"
httpx = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
